Fixed bug with z-index of the wood

--- a/styles/components/game-page.css
+++ b/styles/components/game-page.css
@@ -97,7 +97,7 @@ body {
 
 .wood {
   background-image: url('/assets/wood.png');
-  z-index: 1000000000;
+  z-index: 10;
 }
 
 .leaves {
